# Octahedron

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
dep/: CMakeLists.txt  README.md
src/main/: Base.h  CMakeLists.txt  Octahedron.cpp  Octahedron.h  base.h  octahedron.cpp  octahedron.h  stub.cpp
src/main/Engine/: Engine.cpp  Engine.h  FileSystem.cpp  FileSystem.h
src/main/IO/: DynamicBuffer.cpp  FileStream.cpp  FileStream.h  FileSystem.cpp  FileSystem.h  GZFileStream.cpp  GZFileStream.h  IOInterface.h  IOStream.cpp  IOStream.h  Logger.h  RawFileStream.cpp  RawFileStream.h  Serializer.h
src/main/Tools/: Exception.h  ManagedResource.h  Math.h  ProtectedPtr.h  Reference.h  Registry.h  StringLiteral.h  TypeList.h  ValueList.h  VariableRef.h
src/main/engine/: engine.cpp  engine.h  game_engine.cpp  game_engine.h
src/main/io/: dynamic_buffer.cpp  encoding.cpp  encoding.h  file_stream.cpp  file_stream.h  file_system.cpp  file_system.h  gz_file_stream.cpp  gz_file_stream.h  io_interface.h  io_stream.cpp  io_stream.h  logger.h  raw_file_stream.cpp  raw_file_stream.h  serializer.h  utf8_stream.cpp  utf8_stream.h
src/main/tools/: exception.h  managed_resource.h  math.h  protected_ptr.h  reference.h  registry.h  ring.h  string_literal.h  tuple.h  type_list.h  util.h  value_list.h  variable_ref.h  visitor.h
src/penteract/: CMakeLists.txt  README.md
src/penteract/engine/: animmodel.h  blend.cpp  command.cpp  engine.cpp  engine.h  iqm.h  main.cpp  md2.h  md3.h  md5.h  movie.cpp  obj.h  octa.h  octaedit.cpp  pvs.cpp  server.cpp  smd.h  sound.cpp  texture.cpp  texture.h  vertmodel.h  world.cpp  worldio.cpp
src/penteract/game/: client.cpp  game.h  server.cpp  waypoint.cpp
src/penteract/shared/: cube.h  geom.h  iengine.h  stream.cpp  tools.cpp  tools.h  zip.cpp
src/tesseract/: CMakeLists.txt
src/tesseract/engine/: main.cpp  master.cpp  octaedit.cpp
src/tesseract/shared/: tools.h
src/tests/: CMakeLists.txt  main.cpp  tests.cpp  tests.h
src/tests/io/: circular_buffer.cpp  file_stream.cpp  io.h  ring.cpp
src/tests/testdata/: utf8_no_bom.txt
